--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "aos": "^2.3.4",
     "firebase": "^10.11.0",
@@ -23,7 +24,8 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.11",
